src/objects/Apttus_Config2__OrderWorkflowRuleEntry__c.object
<CustomObject>
    <description>Represents a single entry in an order workflow rule</description>
    <fields>
        <fullName>Apttus_Config2__ActionInputSpec__c</fullName>
        <description>The action input specification</description>
        <inlineHelpText>The action input specification</inlineHelpText>
        <label>Action Input Spec</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Action__c</fullName>
        <description>The action associated with the rule entry</description>
        <inlineHelpText>The action associated with the rule entry</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amend Order Items</fullName>
                </value>
                <value>
                    <fullName>Cancel Order Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <description>The context type associated with the rule entry</description>
        <inlineHelpText>The context type associated with the rule entry</inlineHelpText>
        <label>Context Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Line Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Criteria__c</fullName>
        <description>The rule entry criteria</description>
        <inlineHelpText>The rule entry criteria</inlineHelpText>
        <label>Criteria</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleId__c</fullName>
        <description>ID of the associated rule</description>
        <inlineHelpText>ID of the associated rule</inlineHelpText>
        <label>Order Workflow Rule</label>
        <referenceTo>Apttus_Config2__OrderWorkflowRule__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>RuleEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule entry sequence</description>
        <inlineHelpText>The rule entry sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Workflow Rule Entry</label>
    <nameField>
        <displayFormat>ORE-{0000000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Workflow Rule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>